Fixed nav links being covered by hidden brand text

--- a/src/Styles/_header.scss
+++ b/src/Styles/_header.scss
@@ -10,6 +10,7 @@
       padding: .25rem 2rem !important;
       .navbar-brand{
         width: 3rem;
+        z-index: -9;
         transition: width .5s .5s ease-in;
         &__text{
           opacity: 0;
